--- a/views/admin/layouts/defaults.pug
+++ b/views/admin/layouts/defaults.pug
@@ -16,4 +16,9 @@ html
     script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js") 
     script(src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js")
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js")
+
+    //-tinyMCE
+    script(src="/tinymce/tinymce.min.js")
+    script(src="/admin/js/tinymce-config.js")  
+    //-end tinyMCE
     script(src="/admin/js/script.js") 
