--- a/views/admin/pages/products/create.pug
+++ b/views/admin/pages/products/create.pug
@@ -23,7 +23,7 @@ block main
     div(class = "form-group")
       label(for="desc") Mo ta
       textarea(
-        class="form-control"
+        class="form-control textarea-mce"
         id="desc"
         name="description"
         rows ="5"
