--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -4,4 +4,6 @@
       li 
         a(href=`${prefixAdmin}/dashboard`) Tong quan 
       li 
-        a(href=`${prefixAdmin}/products`) San pham
+        a(href=`${prefixAdmin}/products-category`) Danh muc San pham
+      li 
+        a(href=`${prefixAdmin}/products`) Danh sach San pham
