--- a/views/admin/pages/products-category/create.pug
+++ b/views/admin/pages/products-category/create.pug
@@ -3,11 +3,10 @@ include ../../mixins/alert.pug
 
 block main 
   +alert-error(5000)
-  h1(class="mb-4") Them moi san pham
+  h1(class="mb-4") Them moi danh muc san pham
 
   form(
-    action=`${prefixAdmin}/products/create`
-    id="form-create-product"
+    action=`${prefixAdmin}/products-category/create`
     method="POST"
     enctype="multipart/form-data"
   )
@@ -21,42 +20,20 @@ block main
         required
       )
     div(class = "form-group")
+      label(for="parent_id") Danh muc cha 
+      input(
+        type="text"
+        class="form-control"
+        id="parent_id"
+        name="parent_id"
+      )
+    div(class = "form-group")
       label(for="desc") Mo ta
       textarea(
         class="form-control textarea-mce"
         id="desc"
         name="description"
         rows ="5"
-      )
-    div(class = "form-group")
-      label(for="price") Gia 
-      input(
-        type="number"
-        class="form-control"
-        id="price"
-        name="price"
-        value="0"
-        min="0"
-      )
-    div(class = "form-group")
-      label(for="discount") % Giam gia 
-      input(
-        type="number"
-        class="form-control"
-        id="discount"
-        name="discountPercentage"
-        value="0"
-        min="0"
-      )
-    div(class = "form-group")
-      label(for="stock") So luong 
-      input(
-        type="number"
-        class="form-control"
-        id="stock"
-        name="stock"
-        value="0"
-        min="0"
       )
     div(
       class = "form-group"
