--- a/views/admin/pages/products-category/create.pug
+++ b/views/admin/pages/products-category/create.pug
@@ -1,5 +1,6 @@
 extends ../../layouts/defaults.pug
 include ../../mixins/alert.pug
+include ../../mixins/select-tree.pug
 
 block main 
   +alert-error(5000)
@@ -21,12 +22,19 @@ block main
       )
     div(class = "form-group")
       label(for="parent_id") Danh muc cha 
-      input(
-        type="text"
-        class="form-control"
-        id="parent_id"
+      //- input(
+      //-   type="text"
+      //-   class="form-control"
+      //-   id="parent_id"
+      //-   name="parent_id"
+      //- )
+      select(
         name="parent_id"
-      )
+        id = "parent_id"
+        class="form-control"
+      ) 
+        option(value="") --Danh muc cha-- 
+        +select-tree(newRecords)
     div(class = "form-group")
       label(for="desc") Mo ta
       textarea(
