--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -73,7 +73,7 @@ block main
             tr 
               td 
                 input(type="checkbox" name="id" value=item.id)
-              td #{index + 1}
+              td #{(pagination.currentPage - 1) * pagination.limitItem + (index + 1)}
               td  
                 img(
                   src=item.thumbnail
