them danh muc san pham cho san pham va tao trang nhom quyen

--- a/views/admin/pages/products-category/edit.pug
+++ b/views/admin/pages/products-category/edit.pug
@@ -4,10 +4,11 @@ include ../../mixins/select-tree.pug
 
 block main 
   +alert-error(5000)
-  h1(class="mb-4") Them moi danh muc san pham
-
+  +alert-success(5000)
+  h1(class="mb-4") Chinh sua danh muc san pham
   form(
-    action=`${prefixAdmin}/products-category/create`
+    action=`${prefixAdmin}/products-category/edit/${data.id}?_method=PATCH`
+    id="form-edit-product"
     method="POST"
     enctype="multipart/form-data"
   )
@@ -19,6 +20,7 @@ block main
         id="title"
         name="title"
         required
+        value = data.title
       )
     div(class = "form-group")
       label(for="parent_id") Danh muc cha
@@ -28,7 +30,7 @@ block main
         class="form-control"
       ) 
         option(value="") --Danh muc cha-- 
-        +select-tree(newRecords)
+        +select-tree(newRecords, 1, data.parent_id)
     div(class = "form-group")
       label(for="desc") Mo ta
       textarea(
@@ -36,7 +38,7 @@ block main
         id="desc"
         name="description"
         rows ="5"
-      )
+      ) #{data.description}
     div(
       class = "form-group"
       upload-image
@@ -51,7 +53,7 @@ block main
         upload-image-input
       )
       img(
-        src=""
+        src=data.thumbnail
         upload-image-preview
         class = "image-preview"
       )
@@ -64,6 +66,7 @@ block main
         name="position"
         placeholder = "Tu dong tang"
         min="1"
+        value=data.position
       )
     div(class = "form-group form-check form-check-inline") 
       input(
@@ -72,7 +75,7 @@ block main
         id="statusActive"
         name="status"
         value = "active"
-        checked
+        checked=(data.status == "active" ? true : false)
       )
       label(for="statusActive" class="form-check-label") Hoat dong
     div(class = "form-group form-check form-check-inline") 
@@ -82,11 +85,12 @@ block main
         id="statusInActive"
         name="status"
         value = "inactive"
+        checked=(data.status == "inactive" ? true : false)
       )
       label(for="statusInActive" class="form-check-label") Dung hoat dong
     div(class="form-group")
       button(
         type = "submit"
         class="btn btn-primary"
-      ) Tao moi
+      ) Cap nhat
   script(src="/admin/js/product.js") 
