--- a/views/admin/pages/products/edit.pug
+++ b/views/admin/pages/products/edit.pug
@@ -1,5 +1,6 @@
 extends ../../layouts/defaults.pug
 include ../../mixins/alert.pug
+include ../../mixins/select-tree.pug
 
 block main 
   +alert-error(5000)
@@ -22,6 +23,15 @@ block main
         required
         value=products.title
       )
+    div(class = "form-group")
+      label(for="product_category_id") Danh muc
+      select(
+        name="product_category_id"
+        id = "product_category_id"
+        class="form-control"
+      ) 
+        option(value="") --Danh muc-- 
+        +select-tree(newRecords, 1, products.product_category_id)
     div(class = "form-group")
       label(for="desc") Mo ta
       textarea(
