--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -7,3 +7,5 @@
         a(href=`${prefixAdmin}/products-category`) Danh muc San pham
       li 
         a(href=`${prefixAdmin}/products`) Danh sach San pham
+      li 
+        a(href=`${prefixAdmin}/roles`) Nhom quyen
