--- a/views/admin/mixins/select-tree.pug
+++ b/views/admin/mixins/select-tree.pug
@@ -1,6 +1,9 @@
-mixin select-tree(newRecords, index = 1)
+mixin select-tree(newRecords, index = 1, parent_id = "")
   each item in newRecords
     -const confix = Array(index+1).join("-- ")
-    option(value=item.id) #{confix}#{item.title}
+    option(
+      value=item.id
+      selected=(item.id == parent_id ? true : false)
+    ) #{confix}#{item.title}
       if item.children && item.children.length > 0 
-        +select-tree(item.children, index+1)
+        +select-tree(item.children, index+1, parent_id)
