--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -11,3 +11,6 @@
         a(href=`${prefixAdmin}/roles`) Nhom quyen
       li 
         a(href=`${prefixAdmin}/roles/permissions`) Phan quyen
+      li 
+        a(href=`${prefixAdmin}/roles/permissions`) Danh sach tai khoan
+
