--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -12,5 +12,5 @@
       li 
         a(href=`${prefixAdmin}/roles/permissions`) Phan quyen
       li 
-        a(href=`${prefixAdmin}/roles/permissions`) Danh sach tai khoan
+        a(href=`${prefixAdmin}/accounts`) Danh sach tai khoan
 
