--- a/views/admin/mixins/table-tree.pug
+++ b/views/admin/mixins/table-tree.pug
@@ -43,14 +43,16 @@ mixin table-tree(newRecords, level = 1)
           href=`${prefixAdmin}/products-category/detail/${item.id}`
           class="btn btn-secondary btn-sm "
         ) Chi tiet 
-        a(
-          href=`${prefixAdmin}/products-category/edit/${item.id}`
-          class="btn btn-warning btn-sm ml-1"
-        ) Chinh Sua 
-        button(
-          class="btn btn-danger btn-sm ml-1"
-          data-id=item.id
-          button-delete
-        ) Xoa
+        if(role.permissions.includes("products-category_edit"))
+          a(
+            href=`${prefixAdmin}/products-category/edit/${item.id}`
+            class="btn btn-warning btn-sm ml-1"
+          ) Chinh Sua 
+        if(role.permissions.includes("products-category_delete"))
+          button(
+            class="btn btn-danger btn-sm ml-1"
+            data-id=item.id
+            button-delete
+          ) Xoa
     if item.children && item.children.length > 0 
         +table-tree(item.children, level+1)
