--- a/views/admin/pages/account/create.pug
+++ b/views/admin/pages/account/create.pug
@@ -4,100 +4,104 @@ include ../../mixins/select-tree.pug
 
 block main 
   +alert-error(5000)
-  h1(class="mb-4") Them moi tai khoan
+  +alert-success(5000)
+  if(role.permissions.includes("accounts_create"))
+    h1(class="mb-4") Them moi tai khoan
 
-  form(
-    action=`${prefixAdmin}/accounts/create`
-    id="form-create-product"
-    method="POST"
-    enctype="multipart/form-data"
-  )
-    div(class = "form-group")
-      label(for="fullName") Ho va ten
-      input(
-        type="text"
-        class="form-control"
-        id="fullName"
-        name="fullName"
-        required
-      )
-    div(class = "form-group")
-      label(for="email") Email
-      input(
-        type="text"
-        class="form-control"
-        id="email"
-        name="email"
-        required
-      )
-    div(class = "form-group")
-      label(for="password") Mat khau
-      input(
-        type="password"
-        class="form-control"
-        id="password"
-        name="password"
-        required
-      )
-    div(class = "form-group")
-      label(for="phone") So dien thoai
-      input(
-        type="text"
-        class="form-control"
-        id="phone"
-        name="phone"
-      )
-    div(
-      class = "form-group"
-      upload-image
+    form(
+      action=`${prefixAdmin}/accounts/create`
+      id="form-create-product"
+      method="POST"
+      enctype="multipart/form-data"
     )
-      label(for="avatar") Avatar 
-      input(
-        type="file"
-        class="form-control-file"
-        id="avatar"
-        name="avatar"
-        accept="image/*"
-        upload-image-input
+      div(class = "form-group")
+        label(for="fullName") Ho va ten
+        input(
+          type="text"
+          class="form-control"
+          id="fullName"
+          name="fullName"
+          required
+        )
+      div(class = "form-group")
+        label(for="email") Email
+        input(
+          type="text"
+          class="form-control"
+          id="email"
+          name="email"
+          required
+        )
+      div(class = "form-group")
+        label(for="password") Mat khau
+        input(
+          type="password"
+          class="form-control"
+          id="password"
+          name="password"
+          required
+        )
+      div(class = "form-group")
+        label(for="phone") So dien thoai
+        input(
+          type="text"
+          class="form-control"
+          id="phone"
+          name="phone"
+        )
+      div(
+        class = "form-group"
+        upload-image
       )
-      img(
-        src=""
-        upload-image-preview
-        class = "image-preview"
-      )
-    div(class = "form-group")
-      label(for="role_id") Phan quyen
-      select(
-        name="role_id"
-        id = "role_id"
-        class="form-control"
-      ) 
-        option(disabled) --Phan quyen-- 
-        each item of roles
-          option(value=item.id) #{item.title} 
-    div(class = "form-group form-check form-check-inline") 
-      input(
-        type="radio"
-        class="form-check-input"
-        id="statusActive"
-        name="status"
-        value = "active"
-        checked
-      )
-      label(for="statusActive" class="form-check-label") Hoat dong
-    div(class = "form-group form-check form-check-inline") 
-      input(
-        type="radio"
-        class="form-check-input"
-        id="statusInActive"
-        name="status"
-        value = "inactive"
-      )
-      label(for="statusInActive" class="form-check-label") Dung hoat dong
-    div(class="form-group")
-      button(
-        type = "submit"
-        class="btn btn-primary"
-      ) Tao moi
+        label(for="avatar") Avatar 
+        input(
+          type="file"
+          class="form-control-file"
+          id="avatar"
+          name="avatar"
+          accept="image/*"
+          upload-image-input
+        )
+        img(
+          src=""
+          upload-image-preview
+          class = "image-preview"
+        )
+      div(class = "form-group")
+        label(for="role_id") Phan quyen
+        select(
+          name="role_id"
+          id = "role_id"
+          class="form-control"
+        ) 
+          option(disabled) --Phan quyen-- 
+          each item of roles
+            option(value=item.id) #{item.title} 
+      div(class = "form-group form-check form-check-inline") 
+        input(
+          type="radio"
+          class="form-check-input"
+          id="statusActive"
+          name="status"
+          value = "active"
+          checked
+        )
+        label(for="statusActive" class="form-check-label") Hoat dong
+      div(class = "form-group form-check form-check-inline") 
+        input(
+          type="radio"
+          class="form-check-input"
+          id="statusInActive"
+          name="status"
+          value = "inactive"
+        )
+        label(for="statusInActive" class="form-check-label") Dung hoat dong
+      div(class="form-group")
+        button(
+          type = "submit"
+          class="btn btn-primary"
+        ) Tao moi
 
-  script(src="/admin/js/alert.js") 
+    script(src="/admin/js/alert.js") 
+  else 
+    h1(class="text-center") Ban khong co quyen truy cap
