--- a/views/admin/pages/account/edit.pug
+++ b/views/admin/pages/account/edit.pug
@@ -5,97 +5,100 @@ include ../../mixins/select-tree.pug
 block main 
   +alert-error(5000)
   +alert-success(5000)
-  h1(class="mb-4") Chinh sua tai khoan
+  if(role.permissions.includes("accounts_edit"))
+    h1(class="mb-4") Chinh sua tai khoan
 
-  form(
-    action=`${prefixAdmin}/accounts/edit/${records.id}?_method=PATCH`
-    id="form-create-product"
-    method="POST"
-    enctype="multipart/form-data"
-  )
-    div(class = "form-group")
-      label(for="fullName") Ho va ten
-      input(
-        type="text"
-        class="form-control"
-        id="fullName"
-        name="fullName"
-        required
-        value=records.fullName
-      )
-    div(class = "form-group")
-      label(for="email") Email
-      input(
-        type="text"
-        class="form-control"
-        id="email"
-        name="email"
-        required
-        value=records.email
-      )
-    div(class = "form-group")
-      label(for="phone") So dien thoai
-      input(
-        type="text"
-        class="form-control"
-        id="phone"
-        name="phone"
-        value=records.phone
-      )
-    div(
-      class = "form-group"
-      upload-image
+    form(
+      action=`${prefixAdmin}/accounts/edit/${records.id}?_method=PATCH`
+      id="form-create-product"
+      method="POST"
+      enctype="multipart/form-data"
     )
-      label(for="avatar") Avatar 
-      input(
-        type="file"
-        class="form-control-file"
-        id="avatar"
-        name="avatar"
-        accept="image/*"
-        upload-image-input
+      div(class = "form-group")
+        label(for="fullName") Ho va ten
+        input(
+          type="text"
+          class="form-control"
+          id="fullName"
+          name="fullName"
+          required
+          value=records.fullName
+        )
+      div(class = "form-group")
+        label(for="email") Email
+        input(
+          type="text"
+          class="form-control"
+          id="email"
+          name="email"
+          required
+          value=records.email
+        )
+      div(class = "form-group")
+        label(for="phone") So dien thoai
+        input(
+          type="text"
+          class="form-control"
+          id="phone"
+          name="phone"
+          value=records.phone
+        )
+      div(
+        class = "form-group"
+        upload-image
       )
-      img(
-        src=records.avatar
-        upload-image-preview
-        class = "image-preview"
-      )
-    div(class = "form-group")
-      label(for="role_id") Phan quyen
-      select(
-        name="role_id"
-        id = "role_id"
-        class="form-control"
-      ) 
-        each item of roles
-          option(
-            value=item.id 
-            selected=(records.role_id == item.id ? true : false)
-          ) #{item.title} 
-    div(class = "form-group form-check form-check-inline") 
-      input(
-        type="radio"
-        class="form-check-input"
-        id="statusActive"
-        name="status"
-        value = "active"
-        checked=(records.status == "active" ? true : false)
-      )
-      label(for="statusActive" class="form-check-label") Hoat dong
-    div(class = "form-group form-check form-check-inline") 
-      input(
-        type="radio"
-        class="form-check-input"
-        id="statusInActive"
-        name="status"
-        value = "inactive"
-        checked=(records.status == "inactive" ? true : false)
-      )
-      label(for="statusInActive" class="form-check-label") Dung hoat dong
-    div(class="form-group")
-      button(
-        type = "submit"
-        class="btn btn-primary"
-      ) Cap nhat
+        label(for="avatar") Avatar 
+        input(
+          type="file"
+          class="form-control-file"
+          id="avatar"
+          name="avatar"
+          accept="image/*"
+          upload-image-input
+        )
+        img(
+          src=records.avatar
+          upload-image-preview
+          class = "image-preview"
+        )
+      div(class = "form-group")
+        label(for="role_id") Phan quyen
+        select(
+          name="role_id"
+          id = "role_id"
+          class="form-control"
+        ) 
+          each item of roles
+            option(
+              value=item.id 
+              selected=(records.role_id == item.id ? true : false)
+            ) #{item.title} 
+      div(class = "form-group form-check form-check-inline") 
+        input(
+          type="radio"
+          class="form-check-input"
+          id="statusActive"
+          name="status"
+          value = "active"
+          checked=(records.status == "active" ? true : false)
+        )
+        label(for="statusActive" class="form-check-label") Hoat dong
+      div(class = "form-group form-check form-check-inline") 
+        input(
+          type="radio"
+          class="form-check-input"
+          id="statusInActive"
+          name="status"
+          value = "inactive"
+          checked=(records.status == "inactive" ? true : false)
+        )
+        label(for="statusInActive" class="form-check-label") Dung hoat dong
+      div(class="form-group")
+        button(
+          type = "submit"
+          class="btn btn-primary"
+        ) Cap nhat
 
-  script(src="/admin/js/alert.js") 
+    script(src="/admin/js/alert.js") 
+  else 
+    h1(class="text-center") Ban khong co quyen truy cap
