--- a/views/admin/pages/account/index.pug
+++ b/views/admin/pages/account/index.pug
@@ -6,80 +6,86 @@ include ../../mixins/alert.pug
 block main
   +alert-success(5000)
   +alert-error(5000)
-  h1 Danh sach tai khoan
+  if(role.permissions.includes("accounts_view"))
+    h1 Danh sach tai khoan
 
-  .card.md-3 
-    .card-header Danh sach
-    .card-body 
-      .row 
-        .col-8
-          //- +form-change-multi(`${prefixAdmin}/products/change-multi?_method=PATCH`)
-        .col-4 
-          a(
-            href=`${prefixAdmin}/accounts/create`
-            class="btn btn-outline-success"
-          ) + Them moi
+    .card.md-3 
+      .card-header Danh sach
+      .card-body 
+        .row 
+          .col-8
+            //- +form-change-multi(`${prefixAdmin}/products/change-multi?_method=PATCH`)
+          .col-4 
+            if(role.permissions.includes("accounts_create"))
+              a(
+                href=`${prefixAdmin}/accounts/create`
+                class="btn btn-outline-success"
+              ) + Them moi
 
-      table(
-        class = "table table-hover table-sm"
-        checkbox-multi
-      ) 
-        thead 
-          tr 
-            th 
-              input(type="checkbox" name="checkall")
-            th STT
-            th Hinh anh
-            th Ho ten
-            th Phan quyen
-            th Email
-            th Trang thai
-            th Hanh dong
-
-        tbody 
-          each item, index in records 
+        table(
+          class = "table table-hover table-sm"
+          checkbox-multi
+        ) 
+          thead 
             tr 
-              td 
-                input(type="checkbox" name="id" value=item.id)
-              td  #{index + 1}
-              td
-                img(
-                  src=item.avatar
-                  alt=item.fullName
-                  width="100px"
-                  height="auto"
-                )
-              td #{item.fullName}
-              td #{item.role.title}
-              td #{item.email}
-              td 
-                if(item.status == "active")
+              th 
+                input(type="checkbox" name="checkall")
+              th STT
+              th Hinh anh
+              th Ho ten
+              th Phan quyen
+              th Email
+              th Trang thai
+              th Hanh dong
+
+          tbody 
+            each item, index in records 
+              tr 
+                td 
+                  input(type="checkbox" name="id" value=item.id)
+                td  #{index + 1}
+                td
+                  img(
+                    src=item.avatar
+                    alt=item.fullName
+                    width="100px"
+                    height="auto"
+                  )
+                td #{item.fullName}
+                td #{item.role.title}
+                td #{item.email}
+                td 
+                  if(item.status == "active")
+                    a(
+                      href="javascript:;" 
+                      data-status = item.status
+                      data-id=item.id
+                      button-change-status
+                      class="badge badge-success"
+                    ) Hoat dong
+                  else 
+                    a(
+                      href="javascript:;" 
+                      data-status = item.status
+                      data-id=item.id
+                      button-change-status
+                      class="badge badge-danger"
+                    ) Dung hoat dong
+                td 
                   a(
-                    href="javascript:;" 
-                    data-status = item.status
-                    data-id=item.id
-                    button-change-status
-                    class="badge badge-success"
-                  ) Hoat dong
-                else 
-                  a(
-                    href="javascript:;" 
-                    data-status = item.status
-                    data-id=item.id
-                    button-change-status
-                    class="badge badge-danger"
-                  ) Dung hoat dong
-              td 
-                a(
-                  href=`${prefixAdmin}/accounts/detail/${item.id}`
-                  class="btn btn-secondary btn-sm "
-                ) Chi tiet 
-                a(
-                  href=`${prefixAdmin}/accounts/edit/${item.id}`
-                  class="btn btn-warning btn-sm ml-1"
-                ) Chinh Sua 
-                button(
-                  class="btn btn-danger btn-sm ml-1"
-                  data-id=item.id
-                  button-delete
-                ) Xoa 
+                    href=`${prefixAdmin}/accounts/detail/${item.id}`
+                    class="btn btn-secondary btn-sm "
+                  ) Chi tiet 
+                  if(role.permissions.includes("accounts_edit"))
+                    a(
+                      href=`${prefixAdmin}/accounts/edit/${item.id}`
+                      class="btn btn-warning btn-sm ml-1"
+                    ) Chinh Sua 
+                  if(role.permissions.includes("accounts_delete"))
+                    button(
+                      class="btn btn-danger btn-sm ml-1"
+                      data-id=item.id
+                      button-delete
+                    ) Xoa 
+  else 
+    h1(class="text-center") Ban khong co quyen truy cap
