--- a/views/admin/pages/dashboard/index.pug
+++ b/views/admin/pages/dashboard/index.pug
@@ -2,3 +2,6 @@ extends ../../layouts/defaults.pug
 
 block main
   h1 Trang tong quan
+  div #{user}
+  div -----------------------------
+  div #{role}
