--- a/views/admin/pages/products-category/edit.pug
+++ b/views/admin/pages/products-category/edit.pug
@@ -5,92 +5,95 @@ include ../../mixins/select-tree.pug
 block main 
   +alert-error(5000)
   +alert-success(5000)
-  h1(class="mb-4") Chinh sua danh muc san pham
-  form(
-    action=`${prefixAdmin}/products-category/edit/${data.id}?_method=PATCH`
-    id="form-edit-product"
-    method="POST"
-    enctype="multipart/form-data"
-  )
-    div(class = "form-group")
-      label(for="title") Tieu de 
-      input(
-        type="text"
-        class="form-control"
-        id="title"
-        name="title"
-        required
-        value = data.title
-      )
-    div(class = "form-group")
-      label(for="parent_id") Danh muc cha
-      select(
-        name="parent_id"
-        id = "parent_id"
-        class="form-control"
-      ) 
-        option(value="") --Danh muc cha-- 
-        +select-tree(newRecords, 1, data.parent_id)
-    div(class = "form-group")
-      label(for="desc") Mo ta
-      textarea(
-        class="form-control textarea-mce"
-        id="desc"
-        name="description"
-        rows ="5"
-      ) #{data.description}
-    div(
-      class = "form-group"
-      upload-image
+  if(role.permissions.includes("products-category_edit"))
+    h1(class="mb-4") Chinh sua danh muc san pham
+    form(
+      action=`${prefixAdmin}/products-category/edit/${data.id}?_method=PATCH`
+      id="form-edit-product"
+      method="POST"
+      enctype="multipart/form-data"
     )
-      label(for="thumbnail") Anh 
-      input(
-        type="file"
-        class="form-control-file"
-        id="thumbnail"
-        name="thumbnail"
-        accept="image/*"
-        upload-image-input
+      div(class = "form-group")
+        label(for="title") Tieu de 
+        input(
+          type="text"
+          class="form-control"
+          id="title"
+          name="title"
+          required
+          value = data.title
+        )
+      div(class = "form-group")
+        label(for="parent_id") Danh muc cha
+        select(
+          name="parent_id"
+          id = "parent_id"
+          class="form-control"
+        ) 
+          option(value="") --Danh muc cha-- 
+          +select-tree(newRecords, 1, data.parent_id)
+      div(class = "form-group")
+        label(for="desc") Mo ta
+        textarea(
+          class="form-control textarea-mce"
+          id="desc"
+          name="description"
+          rows ="5"
+        ) #{data.description}
+      div(
+        class = "form-group"
+        upload-image
       )
-      img(
-        src=data.thumbnail
-        upload-image-preview
-        class = "image-preview"
-      )
-    div(class = "form-group")
-      label(for="position") Vi tri 
-      input(
-        type="number"
-        class="form-control"
-        id="position"
-        name="position"
-        placeholder = "Tu dong tang"
-        min="1"
-        value=data.position
-      )
-    div(class = "form-group form-check form-check-inline") 
-      input(
-        type="radio"
-        class="form-check-input"
-        id="statusActive"
-        name="status"
-        value = "active"
-        checked=(data.status == "active" ? true : false)
-      )
-      label(for="statusActive" class="form-check-label") Hoat dong
-    div(class = "form-group form-check form-check-inline") 
-      input(
-        type="radio"
-        class="form-check-input"
-        id="statusInActive"
-        name="status"
-        value = "inactive"
-        checked=(data.status == "inactive" ? true : false)
-      )
-      label(for="statusInActive" class="form-check-label") Dung hoat dong
-    div(class="form-group")
-      button(
-        type = "submit"
-        class="btn btn-primary"
-      ) Cap nhat
-  script(src="/admin/js/product.js") 
+        label(for="thumbnail") Anh 
+        input(
+          type="file"
+          class="form-control-file"
+          id="thumbnail"
+          name="thumbnail"
+          accept="image/*"
+          upload-image-input
+        )
+        img(
+          src=data.thumbnail
+          upload-image-preview
+          class = "image-preview"
+        )
+      div(class = "form-group")
+        label(for="position") Vi tri 
+        input(
+          type="number"
+          class="form-control"
+          id="position"
+          name="position"
+          placeholder = "Tu dong tang"
+          min="1"
+          value=data.position
+        )
+      div(class = "form-group form-check form-check-inline") 
+        input(
+          type="radio"
+          class="form-check-input"
+          id="statusActive"
+          name="status"
+          value = "active"
+          checked=(data.status == "active" ? true : false)
+        )
+        label(for="statusActive" class="form-check-label") Hoat dong
+      div(class = "form-group form-check form-check-inline") 
+        input(
+          type="radio"
+          class="form-check-input"
+          id="statusInActive"
+          name="status"
+          value = "inactive"
+          checked=(data.status == "inactive" ? true : false)
+        )
+        label(for="statusInActive" class="form-check-label") Dung hoat dong
+      div(class="form-group")
+        button(
+          type = "submit"
+          class="btn btn-primary"
+        ) Cap nhat
+    script(src="/admin/js/product.js") 
+  else 
+    h1(class="text-center") Ban khong co quyen truy cap
