--- a/views/admin/pages/products-category/index.pug
+++ b/views/admin/pages/products-category/index.pug
@@ -5,32 +5,36 @@ include ../../mixins/table-tree.pug
 block main 
   +alert-error(5000)
   +alert-success(5000)
-  h1(class="mb-4") Danh muc san pham
-  .card.mb-3
-    .card-header Danh sach
-      .card-body 
-        .row 
-          .col-8 
-          .col-4 
-              a(
-                href=`${prefixAdmin}/products-category/create`
-                class="btn btn-outline-success"
-              ) + Them moi
+  if(role.permissions.includes("products-category_view"))
+    h1(class="mb-4") Danh muc san pham
+    .card.mb-3
+      .card-header Danh sach
+        .card-body 
+          .row 
+            .col-8 
+            .col-4 
+              if(role.permissions.includes("products-category_create"))
+                a(
+                  href=`${prefixAdmin}/products-category/create`
+                  class="btn btn-outline-success"
+                ) + Them moi
 
-        table(
-          class = "table table-hover table-sm"
-          checkbox-multi
-        ) 
-          thead 
-            tr 
-              th 
-                input(type="checkbox" name="checkall")
-              th STT
-              th Hinh anh
-              th Tieu de
-              th Vi tri
-              th Trang thai
-              th Hanh dong
+          table(
+            class = "table table-hover table-sm"
+            checkbox-multi
+          ) 
+            thead 
+              tr 
+                th 
+                  input(type="checkbox" name="checkall")
+                th STT
+                th Hinh anh
+                th Tieu de
+                th Vi tri
+                th Trang thai
+                th Hanh dong
 
-          tbody 
-            +table-tree(newRecords)
+            tbody 
+              +table-tree(newRecords)
+  else 
+    h1(class="text-center") Ban khong co quyen truy cap
