--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -7,134 +7,156 @@ include ../../mixins/alert.pug
 block main
   +alert-success(5000)
   +alert-error(5000)
-  h1 Trang San pham
+  if(role.permissions.includes("products_view"))
+    h1 Trang San pham
 
-  .card.md-3 
-    .card-header Bo loc va tim kiem 
-    .card-body 
-      .row 
-        .col-6 
-          +filter-Status(filterStatus)
+    .card.md-3 
+      .card-header Bo loc va tim kiem 
+      .card-body 
+        .row 
+          .col-6 
+            if(role.permissions.includes("products_edit"))
+              +filter-Status(filterStatus)
 
-        .col-6 
-          +search(keyword)
-  .card.mb-3 
-    .card-header Sap xep 
-    .card-body 
-      .row 
-        .col-4 
-          div(sort)
-            select(
-              class="form-control"
-              name="sort"
-              sort-select
-            )
-              option(value="position-desc") Vi tri giam dan         
-              option(value="position-asc") Vi tri tang dan         
-              option(value="price-desc") Gia giam dan         
-              option(value="price-asc") Gia tang dan         
-              option(value="title-asc") Tieu de A - Z         
-              option(value="title-desc") Tieu de Z - A
-
-            button(
-              class ="btn btn-danger mt-2"
-              sort-clear
-            ) Clear         
-  .card.md-3 
-    .card-header Danh sach
-    .card-body 
-      .row 
-        .col-8
-          +form-change-multi(`${prefixAdmin}/products/change-multi?_method=PATCH`)
-        .col-4 
-          a(
-            href=`${prefixAdmin}/products/create`
-            class="btn btn-outline-success"
-          ) + Them moi
-      
-      table(
-        class = "table table-hover table-sm"
-        checkbox-multi
-      ) 
-        thead 
-          tr 
-            th 
-              input(type="checkbox" name="checkall")
-            th STT
-            th Hinh anh
-            th Tieu de
-            th Gia
-            th Vi tri
-            th Trang thai
-            th Hanh dong
-
-        tbody 
-          each item, index in products 
-            tr 
-              td 
-                input(type="checkbox" name="id" value=item.id)
-              td #{(pagination.currentPage - 1) * pagination.limitItem + (index + 1)}
-              td  
-                img(
-                  src=item.thumbnail
-                  alt=item.title
-                  width="100px"
-                  height="auto"
+          .col-6 
+            if(role.permissions.includes("products_edit"))
+              +search(keyword)
+    .card.mb-3 
+      .card-header Sap xep 
+      .card-body 
+        .row 
+          .col-4 
+            if(role.permissions.includes("products_edit"))
+              div(sort)
+                select(
+                  class="form-control"
+                  name="sort"
+                  sort-select
                 )
-              td #{item.title}
-              td #{item.price}$
-              td 
-                input(
-                  type="number"
-                  value=item.position
-                  style="width: 60px"
-                  min="1"
-                  name = "position"
-                )
-              td 
-                if(item.status == "active")
-                  a(
-                    href="javascript:;" 
-                    data-status = item.status
-                    data-id=item.id
-                    button-change-status
-                    class="badge badge-success"
-                  ) Hoat dong
-                else 
-                  a(
-                    href="javascript:;" 
-                    data-status = item.status
-                    data-id=item.id
-                    button-change-status
-                    class="badge badge-danger"
-                  ) Dung hoat dong
-              td 
-                a(
-                  href=`${prefixAdmin}/products/detail/${item.id}`
-                  class="btn btn-secondary btn-sm "
-                ) Chi tiet 
-                a(
-                  href=`${prefixAdmin}/products/edit/${item.id}`
-                  class="btn btn-warning btn-sm ml-1"
-                ) Chinh Sua 
+                  option(value="position-desc") Vi tri giam dan         
+                  option(value="position-asc") Vi tri tang dan         
+                  option(value="price-desc") Gia giam dan         
+                  option(value="price-asc") Gia tang dan         
+                  option(value="title-asc") Tieu de A - Z         
+                  option(value="title-desc") Tieu de Z - A
+
                 button(
-                  class="btn btn-danger btn-sm ml-1"
-                  data-id=item.id
-                  button-delete
-                ) Xoa 
-  
-  +pagination(pagination)
-  form(
-    action=``
-    method="POST"
-    id="change-status"
-    data-path=`${prefixAdmin}/products/change-status`
-  ) 
-  form(
-    action=``
-    method="POST"
-    id="form-delete-item"
-    data-path=`${prefixAdmin}/products/delete`
-  ) 
-  script(src="/admin/js/product.js")
+                  class ="btn btn-danger mt-2"
+                  sort-clear
+                ) Clear         
+    .card.md-3 
+      .card-header Danh sach
+      .card-body 
+        .row 
+          .col-8
+            if(role.permissions.includes("products_edit"))
+              +form-change-multi(`${prefixAdmin}/products/change-multi?_method=PATCH`)
+          .col-4
+            if(role.permissions.includes("products_create")) 
+              a(
+                href=`${prefixAdmin}/products/create`
+                class="btn btn-outline-success"
+              ) + Them moi
+        
+        table(
+          class = "table table-hover table-sm"
+          checkbox-multi
+        ) 
+          thead 
+            tr 
+              th 
+                input(type="checkbox" name="checkall")
+              th STT
+              th Hinh anh
+              th Tieu de
+              th Gia
+              th Vi tri
+              th Trang thai
+              th Hanh dong
+
+          tbody 
+            each item, index in products 
+              tr 
+                td 
+                  input(type="checkbox" name="id" value=item.id)
+                td #{(pagination.currentPage - 1) * pagination.limitItem + (index + 1)}
+                td  
+                  img(
+                    src=item.thumbnail
+                    alt=item.title
+                    width="100px"
+                    height="auto"
+                  )
+                td #{item.title}
+                td #{item.price}$
+                td 
+                  input(
+                    type="number"
+                    value=item.position
+                    style="width: 60px"
+                    min="1"
+                    name = "position"
+                  )
+                td 
+                  if(role.permissions.includes("products_edit"))
+                    if(item.status == "active")
+                      a(
+                        href="javascript:;" 
+                        data-status = item.status
+                        data-id=item.id
+                        button-change-status
+                        class="badge badge-success"
+                      ) Hoat dong
+                    else 
+                      a(
+                        href="javascript:;" 
+                        data-status = item.status
+                        data-id=item.id
+                        button-change-status
+                        class="badge badge-danger"
+                      ) Dung hoat dong
+                  else 
+                    if(item.status == "active")
+                      a(
+                        data-status = item.status
+                        class="badge badge-success"
+                      ) Hoat dong
+                    else 
+                      a(
+                        data-status = item.status
+                        class="badge badge-danger"
+                      ) Dung hoat dong
+                td 
+                  a(
+                    href=`${prefixAdmin}/products/detail/${item.id}`
+                    class="btn btn-secondary btn-sm "
+                  ) Chi tiet 
+                  if(role.permissions.includes("products_edit"))
+                    a(
+                      href=`${prefixAdmin}/products/edit/${item.id}`
+                      class="btn btn-warning btn-sm ml-1"
+                    ) Chinh Sua 
+                  if(role.permissions.includes("products_delete"))
+                    button(
+                      class="btn btn-danger btn-sm ml-1"
+                      data-id=item.id
+                      button-delete
+                    ) Xoa 
+    
+    +pagination(pagination)
+    form(
+      action=``
+      method="POST"
+      id="change-status"
+      data-path=`${prefixAdmin}/products/change-status`
+    ) 
+    form(
+      action=``
+      method="POST"
+      id="form-delete-item"
+      data-path=`${prefixAdmin}/products/delete`
+    ) 
+    script(src="/admin/js/product.js")
+  else 
+    h1(class="text-center") Ban khong co quyen truy cap
     
