--- a/views/admin/pages/role/edit.pug
+++ b/views/admin/pages/role/edit.pug
@@ -4,32 +4,35 @@ include ../../mixins/alert.pug
 block main 
   +alert-error(5000)
   +alert-success(5000)
-  h1(class="mb-4") Them moi nhom quyen
+  if(role.permissions.includes("roles_edit"))
+    h1(class="mb-4") Them moi nhom quyen
 
-  form(
-    action=`${prefixAdmin}/roles/edit/${record.id}?_method=PATCH`
-    method="POST"
-  )
-    div(class="form-group")
-      label(for="title") Tieu de 
-      input(
-        type="text"
-        class="form-control"
-        id="title"
-        name="title"
-        required
-        value=record.title
-      )
-    div(class="form-group")
-      label(for="desc") Mo ta
-      input(
-        class="form-control"
-        id="desc"
-        name="description"
-        value=record.description
-      )
-    div(class="form-group")
-      button(
-        type ="submit"
-        class="btn btn-primary"
-      ) Cap nhat
+    form(
+      action=`${prefixAdmin}/roles/edit/${record.id}?_method=PATCH`
+      method="POST"
+    )
+      div(class="form-group")
+        label(for="title") Tieu de 
+        input(
+          type="text"
+          class="form-control"
+          id="title"
+          name="title"
+          required
+          value=record.title
+        )
+      div(class="form-group")
+        label(for="desc") Mo ta
+        input(
+          class="form-control"
+          id="desc"
+          name="description"
+          value=record.description
+        )
+      div(class="form-group")
+        button(
+          type ="submit"
+          class="btn btn-primary"
+        ) Cap nhat
+  else 
+    h1(class="text-center") Ban khong co quyen truy cap
