--- a/views/client/page/home/index.pug
+++ b/views/client/page/home/index.pug
@@ -1,3 +1,21 @@
 extends ../../layouts/default.pug
+include ../../mixins/box-head.pug
+include ../../mixins/products-grid.pug
+
+
 block main
-  h1 Trang danh sach san pham    
+
+
+  .section-products-featured.my-5
+    .container
+      .row 
+        .col-12 
+          +box-head("Danh sách sản phẩm nổi bật")
+      +products-grid(productsFeatured)
+
+  .section-products-new.my-5
+    .container
+      .row 
+        .col-12 
+          +box-head("Danh sách sản phẩm mới")
+      +products-grid(productsNew)
