--- a/views/client/page/products/detail.pug
+++ b/views/client/page/products/detail.pug
@@ -1,32 +1,53 @@
 extends ../../layouts/default.pug
 include ../../mixins/box-head.pug
 block main
+  .product-detail
+    .container.my-5 
+      .row 
+        .col-6 
+          .inner-thumb 
+            img(src=product.thumbnail, alt=product.title)
+        .col-6 
+          if(product.title) 
+            h1(class="mb-4") #{product.title}
 
-  .container.my-3 
-    .row 
-      .col-12 
-        if(products.title) 
-          h1(class="mb-4") #{products.title}
-        
-        if(products.price) 
-          div(class="mb-4") Gia: <b>#{products.price}</b>
-        
-        if(products.discountPercentage) 
-          div(class="mb-4") Giam gia: <b>#{products.discountPercentage}%</b>
+          if(product.category)
+            div(class="inner-category")
+              span Danh mục: 
+              a(href=`/products/${product.category.slug}`) #{product.category.title}
+          
+          if(product.newPrice) 
+            div(class="inner-price-new") #{product.newPrice}$
 
-        if(products.stock) 
-          div(class="mb-4") Con lai: <b>#{products.stock}</b>
+          if(product.price) 
+            div(class="inner-price-old") #{product.price}
+          
+          if(product.discountPercentage) 
+            div(class="inner-percent") Giảm tới:  <span>#{product.discountPercentage}%</span>
 
-        if(products.stock) 
-          div(class="mb-4") 
-            img(
-              src=products.thumbnail 
-              style="width: 100px"
+          if(product.stock) 
+            div(class="inner-stock") Còn lại #{product.stock} sản phẩm
+
+          form(
+            action=`/cart/add/${product.id}`
+            method="POST"
+          )
+            input(
+              class="form-control mb-2"
+              type="number"
+              name="quantity"
+              value="1"
+              max=product.stock
             )
+            button(
+              type="submit"
+              class="btn btn-success btn-block"
+            ) Thêm vào giỏ hàng
 
-        if(products.position)
-          div(class="mb-4") Vi tri: <b>#{products.position}</b>
+  hr
 
-        if(products.description)
-          div(class="mb-4") Mo ta: #{products.description}
-
+  .container.my-5
+    .row
+      .col-12 
+        +box-head("Mô tả sản phẩm")
+        .inner-desc !{product.description}
