--- a/views/client/page/products/index.pug
+++ b/views/client/page/products/index.pug
@@ -1,19 +1,9 @@
 extends ../../layouts/default.pug
 include ../../mixins/box-head.pug
+include ../../mixins/products-grid.pug
 block main
   .container.my-3 
     .row 
       .col-12 
-        +box-head("Danh sach san pham")
-    .row 
-      each item in products 
-        .col-4.mb-3 
-          a(href=`/products/${item.slug}`) 
-            .product-item 
-              .inner-image 
-                img(src=item.thumbnail, alt=item.title)      
-              .inner-content 
-                h3.inner-title #{item.title}
-                .inner-price-new #{item.priceNew}$
-                .inner-price-old #{item.price}$
-                .inner-discount -#{item.discountPercentage}%
+        +box-head(pageTitle)
+    +products-grid(products)
