thêm trang gio hàng

--- a/views/client/page/products/detail.pug
+++ b/views/client/page/products/detail.pug
@@ -1,6 +1,9 @@
 extends ../../layouts/default.pug
 include ../../mixins/box-head.pug
+include ../../mixins/alert.pug
 block main
+  +alert-error(2000)
+  +alert-success(2000)
   .product-detail
     .container.my-5 
       .row 
@@ -51,3 +54,4 @@ block main
       .col-12 
         +box-head("Mô tả sản phẩm")
         .inner-desc !{product.description}
+  script(src="/admin/js/alert.js")
