--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -36,3 +36,5 @@ header.header
               -const pathProduct = "/products"
               a(href= pathProduct) San pham
                 +sub-menu(layoutProductsCategory, pathProduct) 
+            li 
+              a(href="/cart") Giỏ hàng (#{miniCart ? miniCart.sumQuantity : "0"})
