--- a/views/client/layouts/default.pug
+++ b/views/client/layouts/default.pug
@@ -3,7 +3,7 @@ html
   head 
     title #{pageTitle} 
     link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css")
-    link(rel="stylesheet", href="/css/style.css")
+    link(rel="stylesheet", href="/client/css/style.css")
   body 
     include ../partials/header.pug
 
@@ -14,4 +14,4 @@ html
     script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js") 
     script(src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js")
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js")
-    script(src="/js/script.js") 
+    script(src="/client/js/script.js") 
